new favicon image added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="https://cdn3.vectorstock.com/i/1000x1000/36/97/approved-chat-app-icon-vector-28873697.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://static-00.iconduck.com/assets.00/wechat-icon-1024x1024-jaa4r6yx.png" type="image/x-icon">
     <title>We Chat</title>
   </head>
   <body>
